# magi-playground-wiki

./: .env.example  .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml
app/: config.py  main.py  models.py  runner.py
deploy/: deploy.sh  magi-playground-wiki.service  nginx-playground.conf  nginx-rate-limits.conf
runtime/: Dockerfile  entrypoint.py
tests/: test_run.py  test_runner.py
